# framejudge-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.en.md  README.md  pyproject.toml
app/: audio.py  fingerprint.py  frames.py  main.py  occlusion.py  pdf_report.py  pipeline.py  report.py  scoring.py  settings.py  timeline.py  visual.py
app/models/: README.md
app/static/: app.js  index.html  styles.css
