[project]
name = "framejudge"
version = "0.1.0"
description = "AI-assisted video comparison forensics tool (帧证量化计分)"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "reportlab>=4.2",
    "pypdf>=5.0",
    "opencv-python-headless>=4.9",
    "imagehash>=4.3",
    "imageio-ffmpeg>=0.5.1",
    "pillow>=10.0",
    "numpy>=1.26,<2",
    "scipy>=1.11",
    "librosa>=0.10",
    "soundfile>=0.12",
    "rapidocr-onnxruntime>=1.3",
    "openai>=1.30",
    "jinja2>=3.1",
]
